--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lava Jato do Rei | Estética Automotiva</title>
+    <title>Lava Jato do Rei | O Centro de Tudo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -19,7 +19,7 @@
 <body>
 
     <i class="fa-solid fa-crown marca-dagua text-[500px] top-10 left-1/2 -translate-x-1/2"></i>
-    <i class="fa-solid fa-hose marca-dagua text-[300px] bottom-10 right-0 rotate-45"></i>
+    <i class="fa-solid fa-hose-reels marca-dagua text-[300px] bottom-10 right-0 rotate-45"></i>
 
     <nav class="p-6 border-b border-zinc-900 flex justify-between items-center bg-black/95 sticky top-0 z-50">
         <div class="font-black italic text-xl uppercase tracking-tighter">👑 LAVA JATO <span class="texto-ouro">DO REI</span></div>
@@ -38,35 +38,28 @@
         <img src="https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?auto=format&fit=crop&w=800&q=80" class="foto-carro rounded-3xl h-64 w-full shadow-2xl border border-zinc-800">
     </section>
 
-    <section class="py-20 px-6 max-w-4xl mx-auto space-y-12">
-        <div class="border-l-4 border-yellow-600 pl-6">
-            <h2 class="text-3xl font-black texto-ouro uppercase italic mb-4">A Evolução dos Lava-Jatos</h2>
-            <p class="text-zinc-400 italic leading-relaxed">A história dos lava-jatos começa nos EUA em 1914 com métodos manuais e evolui para máquinas automáticas nos anos 60, popularizando-se globalmente com inovações ecológicas.</p>
-        </div>
+    <section class="py-20 px-6 max-w-5xl mx-auto">
+        <div class="bg-zinc-900/60 p-10 md:p-16 rounded-[50px] border border-zinc-800 backdrop-blur-md shadow-2xl">
+            <h2 class="text-4xl md:text-5xl font-black texto-ouro uppercase italic mb-8 text-center leading-tight">Quadra 14: O Coração de Sobradinho</h2>
+            
+            <div class="space-y-6 text-zinc-300 text-lg md:text-xl leading-relaxed text-justify italic">
+                <p>
+                    Escolhemos a <span class="texto-ouro font-bold">Quadra 14</span> por um motivo estratégico e fundamental: ela é, sem dúvida, o <span class="text-white font-bold">centro pulsante de Sobradinho</span>. Estar aqui significa estar no epicentro de tudo o que acontece na nossa cidade. 
+                </p>
+                
+                <p>
+                    Nossa localização foi planejada para oferecer a máxima conveniência para você. Estamos situados a poucos metros das <span class="text-white font-bold">principais escolas da região</span>, facilitando a rotina de quem precisa deixar os filhos e quer aproveitar o tempo para cuidar do carro. Além disso, estamos colados ao <span class="text-white font-bold">Sobradinho Shopping</span>, permitindo que você resolva suas pendências, faça compras ou aproveite o lazer enquanto nós garantimos o brilho real do seu veículo.
+                </p>
 
-        <div class="grid md:grid-cols-2 gap-8 text-zinc-300">
-            <div class="bg-zinc-900/40 p-6 rounded-2xl border border-zinc-800">
-                <h4 class="texto-ouro font-bold uppercase mb-2">Pioneirismo (1914)</h4>
-                <p class="text-sm italic">O primeiro "lava-car" surgiu nos EUA utilizando baldes e sabão. Com o aumento dos carros, a demanda impulsionou a inovação.</p>
+                <p>
+                    Se você gosta de esporte, a famosa <span class="text-white font-bold">quadra de futebol da 14</span> é nossa vizinha, reforçando que este é o ponto de encontro preferido da comunidade. Criamos o <span class="texto-ouro font-bold">Lava Jato do Rei</span> aqui exatamente por isso: por ser perto de tudo! Queremos que você ganhe tempo. Deixe o seu carro com quem entende no lugar mais acessível e central da cidade.
+                </p>
             </div>
-            <div class="bg-zinc-900/40 p-6 rounded-2xl border border-zinc-800">
-                <h4 class="texto-ouro font-bold uppercase mb-2">Automatização (1960)</h4>
-                <p class="text-sm italic">Chegada dos sistemas mecanizados com túneis e escovas giratórias, transformando o lava-rápido em uma indústria global.</p>
-            </div>
-            <div class="bg-zinc-900/40 p-6 rounded-2xl border border-zinc-800">
-                <h4 class="texto-ouro font-bold uppercase mb-2">Modernização</h4>
-                <p class="text-sm italic">Equipamentos sem escovas e lavagem a seco, focando na sustentabilidade e na estética automotiva detalhada.</p>
-            </div>
-            <div class="bg-zinc-900/40 p-6 rounded-2xl border border-zinc-800">
-                <h4 class="texto-ouro font-bold uppercase mb-2">No Brasil</h4>
-                <p class="text-sm italic">Crescimento de microempresas importantes focadas em reuso de água e produtos biodegradáveis.</p>
-            </div>
-        </div>
 
-        <div class="bg-zinc-900/80 p-8 rounded-[40px] border border-zinc-800 text-center">
-            <h3 class="texto-ouro font-black text-2xl mb-4 uppercase italic">Excelência na Quadra 14</h3>
-            <p class="text-zinc-300 italic mb-2 text-lg">Localizados estrategicamente **atrás do Sobradinho Shopping e ao lado das principais escolas**.</p>
-            <p class="text-zinc-500 italic">O Lava Jato do Rei traz toda essa evolução histórica para o coração de Sobradinho.</p>
+            <div class="mt-12 text-center">
+                <p class="texto-ouro font-black text-2xl uppercase tracking-widest italic">Perto das escolas. Atrás do Shopping. Do lado do futebol.</p>
+                <p class="text-zinc-500 mt-2">A conveniência que você merece está na Quadra 14.</p>
+            </div>
         </div>
     </section>
 
