Fix spelling and consistency in index.html
Updated various text elements to correct spelling and improve consistency.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lava Jato do Rei | O Centro de Tudo</title>
+    <title>Lava Jato Du Rei | O Centro de Tudo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -43,22 +43,35 @@
     <i class="fa-solid fa-crown marca-dagua text-[500px] top-10 left-1/2 -translate-x-1/2"></i>
 
     <nav class="p-6 border-b border-zinc-900 flex justify-between items-center bg-black/95 sticky top-0 z-50">
-        <div class="font-black italic text-xl uppercase tracking-tighter">👑 LAVA JATO <span class="texto-ouro">DO REI</span></div>
-        <a href="https://wa.me/5561981704587" class="fundo-ouro text-black px-6 py-2 rounded-full font-black uppercase text-xs">Falar com o Rei</a>
+        <div class="font-black italic text-xl uppercase tracking-tighter">👑 LAVA JATO <span class="texto-ouro">DU REI</span></div>
+        <a href="https://wa.me/5561981704587" class="fundo-ouro text-black px-6 py-2 rounded-full font-black uppercase text-xs">Falar com u Rei</a>
     </nav>
 
     <header class="py-20 px-6 text-center">
-        <h1 class="text-6xl md:text-8xl font-black uppercase italic mb-4 leading-tight">BRILHO <span class="texto-ouro">DO REI</span></h1>
+        <h1 class="text-6xl md:text-8xl font-black uppercase italic mb-4 leading-tight">BRILHO <span class="texto-ouro">DU REI</span></h1>
         <p class="text-zinc-400 text-lg italic uppercase tracking-widest font-bold mb-8">O melhor de Sobradinho na Quadra 14</p>
-        <a href="https://wa.me/5561981704587" class="fundo-ouro text-black px-10 py-4 rounded-full font-black uppercase text-lg shadow-2xl hover:scale-110 transition inline-block">Falar com o Rei</a>
+        <a href="https://wa.me/5561981704587" class="fundo-ouro text-black px-10 py-4 rounded-full font-black uppercase text-lg shadow-2xl hover:scale-110 transition inline-block">Falar com u Rei</a>
     </header>
 
     <section class="py-12 px-6 max-w-4xl mx-auto">
         <div class="bg-zinc-900/40 p-10 rounded-[40px] border border-zinc-800 backdrop-blur-sm text-center">
             <h2 class="text-3xl font-black uppercase italic mb-6 texto-ouro">O Coração da Quadra 14</h2>
-            <p class="text-zinc-300 italic leading-relaxed">
-                Estamos estrategicamente localizados na Quadra 14 de Sobradinho. Um ponto central, próximo ao Shopping e às principais escolas. Enquanto cuidamos do seu carro com padrão real, você aproveita o que a cidade tem de melhor ao redor.
+            <p class="text-zinc-300 italic leading-relaxed mb-8">
+                Estamos estrategicamente localizados na Quadra 14 de Sobradinho. Um ponto central, próximo ao Shopping e às principais escolas. Enquanto cuidamos du seu carro com padrão real, você aproveita u que a cidade tem de melhor ao redor.
             </p>
+            
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 pt-6 border-t border-zinc-800">
+                <div class="text-center">
+                    <h4 class="texto-ouro font-black uppercase text-sm tracking-widest mb-2"><i class="fa-solid fa-clock mr-2"></i> Horáriu du Rei</h4>
+                    <p class="text-zinc-400 text-sm italic">Segunda a Sexta: 08:00 às 18:00</p>
+                    <p class="text-zinc-400 text-sm italic">Sábado: 08:00 às 14:00</p>
+                </div>
+                <div class="text-center">
+                    <h4 class="texto-ouro font-black uppercase text-sm tracking-widest mb-2"><i class="fa-solid fa-location-dot mr-2"></i> Onde estamus</h4>
+                    <p class="text-zinc-400 text-sm italic">Quadra 14, Sobradinho - DF</p>
+                    <p class="text-zinc-500 text-[10px] uppercase">Próximo ao Sobradinho Shopping</p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -84,9 +97,9 @@
             <div class="grid md:grid-cols-2 gap-10 items-center">
                 <div class="space-y-6">
                     <h3 class="text-4xl font-black texto-ouro uppercase italic">Polimento de Farol</h3>
-                    <p class="text-zinc-400 text-lg italic">Faróis novos de novo. Removemos o amarelado e devolvemos a total transparência e segurança para sua direção.</p>
+                    <p class="text-zinc-400 text-lg italic">Faróis novos de novo. Removemos u amarelado e devolvemos a total transparência e segurança para sua direção.</p>
                 </div>
-                <img src="https://images.unsplash.com/photo-1549317661-bd32c8ce0db2?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80" alt="Farol de carro">
+                <img src="https://images.pexels.com/photos/1191145/pexels-photo-1191145.jpeg?auto=compress&cs=tinysrgb&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80">
             </div>
         </div>
 
@@ -94,7 +107,7 @@
             <div class="grid md:grid-cols-2 gap-10 items-center">
                 <div class="space-y-6">
                     <h3 class="text-4xl font-black texto-ouro uppercase italic">Higienização</h3>
-                    <p class="text-zinc-400 text-lg italic">Limpeza técnica do interior. Bancos, teto e painel tratados com produtos que eliminam bactérias e renovam o ambiente.</p>
+                    <p class="text-zinc-400 text-lg italic">Limpeza técnica du interior. Bancos, teto e painel tratados com produtos que eliminam bactérias e renovam u ambiente.</p>
                 </div>
                 <img src="https://images.unsplash.com/photo-1583121274602-3e2820c69888?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80">
             </div>
@@ -104,7 +117,7 @@
             <div class="grid md:grid-cols-2 gap-10 items-center">
                 <div class="space-y-6">
                     <h3 class="text-4xl font-black texto-ouro uppercase italic">Lavagem Americana</h3>
-                    <p class="text-zinc-400 text-lg italic">O auge do detalhamento automotivo. Limpeza externa profunda usando as melhores ceras e shampoos do mercado.</p>
+                    <p class="text-zinc-400 text-lg italic">U auge du detalhamento automotivo. Limpeza externa profunda usando as melhores ceras e shampoos du mercado.</p>
                 </div>
                 <img src="https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80">
             </div>
